refactor(ui): Use string resource for title and remove unused strings

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:paddingTop="16dp"
         android:paddingEnd="16dp"
         android:paddingBottom="8dp"
-        android:text="Weather"
+        android:text="@string/weather_title"
         android:textColor="@android:color/white"
         android:textSize="34sp"
         android:textStyle="bold" />
