--- a/app/src/main/res/layout/item_weather.xml
+++ b/app/src/main/res/layout/item_weather.xml
@@ -20,7 +20,20 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Słupsk" />
+        tools:text="Slupsk" />
+
+    <TextView
+        android:id="@+id/locationTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:textColor="#B3FFFFFF"
+        android:textSize="18sp"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/cityNameTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="My Location"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/temperatureTextView"
